Fri Apr 12 21:38:33 1996  Richard Basch  <basch@lehman.com>

	* md4driver.c md4glue.c md4.c rsa-md4.h md4crypto.c:
	Renamed the functions to be preceded with krb5_

Fri Oct  6 22:00:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:48:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 10:30:58 1995 Keith Vetter (keithv@fusion.com)

	* md4crypt.c: put function prototype back in, fixed signed/unsigned
		mismatch and removed unused variables.
	* md4glue.c: put function prototypes back in.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * md4crypto.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * md4crypto.c : Replace KEYTYPE_DES_CBC_MD4 for KEYTYPE_DES.

Thu Jul 27 15:22:17 EDT 1995	Paul Park	(pjpark@mit.edu)
	* rsa-md4.h - Don't include k5-config.h.  No longer present or needed.


Fri Jul 7 16:13:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add t_cksum under unix only.
	* configure.in - Define MD4_K5BETA_COMPAT to select compatability for
		md4crypto.c.
	* md4crypto.c - Correct implementation of RSA-MD4-DES checksums.  Add
		ability to understand previous implementation and ability to
		generate these checksums when forced to.
		- Also add verification procedure for these checksums.
	* md4glue.c - Add verifier procedure.
	* rsa-md4.h - Add RSA_MD4_DES_CONFOUND_LENGTH, the length of the
		RSA-MD4-DES confounder per RFC1510.


Tue Jun 27 15:53:02 EDT 1995	Paul Park	(pjpark@mit.edu)
	* md4.c(Transform) - Add 'register' to scratch variable names.  Helps
		out compiler so that DEC native compilers can now optimize
		this module within our lifetimes.

Thu Jun 22 16:13:29 1995  Tom Yu  (tlyu@dragons-lair)

	* md4.c: reverse sense of KRB5_PROVIDE_PROTOTYPES
